--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
   <main>
       <header>
           <h1>cursos gratis</h1>
+          <img src="imagens/curso em video color.png" alt="Curso em video">
           <article>
             <h2>curso de html 5 e css3</h2>
+            <img class="lado" src="imagens/images.png" alt="Curso de html">
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum earum obcaecati vero minima, ducimus ullam consequatur nihil soluta, qui hic iusto similique explicabo temporibus numquam autem praesentium. Quibusdam, cupiditate error?</p>
+          <p><a href="cursohtml.html">Acesse o curso de html5</a></p>
         </article>
         <h2>curso de javaScript</h2>
+        <img class="lado" src="imagens/JS.png" alt="Curso de javaScript">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet voluptas ducimus expedita laboriosam porro ex ipsa est, ipsum pariatur? Dicta voluptates voluptatibus expedita omnis? Nam, sequi explicabo! Quidem, atque aperiam!</p>
+        <p><a href="">Acesse o curso de JavaScript</a></p>
         <article>
 
 
